--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_round">
-                            <img src="/icons/iconreason1.png" alt="1">
+                            <img src="icons/iconreason1.png" alt="1">
                         </div>
                     
                         <div class="reasons_descr">
