--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_round">
-                            <img src="../src/icons/iconreason2.png" alt="2">
+                            <img src="icons/iconreason2.png" alt="2">
                         </div>
 
                         <div class="reasons_descr">
@@ -111,7 +111,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_round">
-                            <img src="../src/icons/iconreason3.png" alt="3">
+                            <img src="icons/iconreason3.png" alt="3">
                         </div>
 
                         <div class="reasons_descr">
@@ -128,7 +128,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_round">
-                            <img src="../src/icons/iconreason4.png" alt="4">
+                            <img src="icons/iconreason4.png" alt="4">
                         </div>
 
                         <div class="reasons_descr">
@@ -146,7 +146,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_round">
-                            <img src="../src/icons/iconreason5.png" alt="5">
+                            <img src="icons/iconreason5.png" alt="5">
                         </div>
 
                         <div class="reasons_descr">
@@ -163,7 +163,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_round">
-                            <img src="../src/icons/iconreason6.png" alt="6">
+                            <img src="icons/iconreason6.png" alt="6">
                         </div>
 
                         <div class="reasons_descr">
@@ -180,7 +180,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_round">
-                            <img src="../src/icons/iconreason7.png" alt="7">
+                            <img src="icons/iconreason7.png" alt="7">
                         </div>
 
                         <div class="reasons_descr">
@@ -197,7 +197,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_round">
-                            <img src="../src/icons/iconreason8.png" alt="8">
+                            <img src="icons/iconreason8.png" alt="8">
                         </div>
 
                         <div class="reasons_descr">
